--- a/Circulars/index.html
+++ b/Circulars/index.html
@@ -1,6 +1,6 @@
 ---
-{breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
-    href="/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Circulars</span></span>,
+{breadcrumbs: '<span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
+    href="http://mfma.treasury.gov.za/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Circulars</span></span>',
   layout: default, original_url: 'http://mfma.treasury.gov.za/Circulars/Pages/default.aspx',
   title: Circulars}
 
@@ -9,15 +9,20 @@
 <table>
 <tr>
 <td>
-<div><br>
+<div>
+<br>
 <table>
 <tbody>
 <tr>
 <td><img src="/PublishingImages/pdfnew.gif"/></td>
+<td><a href="http://mfma.treasury.gov.za/Circulars/Documents/MFMA%20Circular%2083%20-%20eTender%20Portal%20-%2018%20July%202016.pdf" target="_blank"><font>MFMA Circular No 83 - eTender Portal – 18 July 2016 </font>  </a></td>
+<td><font>(165kb)</font></td></tr>
+<tr>
+<td><img src="/PublishingImages/pdf16.gif"/></td>
 <td><a href="http://mfma.treasury.gov.za/Circulars/Documents/MFMA%20Circular%20No%2082%20-%20Cost%20Containment%20Measures%20-%2030%20March%202016.pdf" target="_blank"><font>MFMA Circular No 82 - Cost Containment Measures – 30 March 2016  </font>  </a></td>
 <td><font>(324kb)</font></td></tr>
 <tr>
-<td><img src="/PublishingImages/pdfnew.gif"/></td>
+<td><img src="/PublishingImages/pdf16.gif"/></td>
 <td><a href="http://mfma.treasury.gov.za/Circulars/Documents/MFMA%20Circular%20No%2081%20-%20Web%20Based%20Central%20Supplier%20Database%20-%2018%20March%202016.pdf" target="_blank"><font>MFMA Circular No 81 - Web Based Central Supplier Database - 18 March 2016 </font>  </a></td>
 <td><font>(117kb)</font></td></tr>
 <tr>
