--- a/Documents/02. Built Environment Performance Plans/index.html
+++ b/Documents/02. Built Environment Performance Plans/index.html
@@ -7,14 +7,17 @@ layout: default
 original_url: http://mfma.treasury.gov.za/Documents/02. Built Environment Performance
   Plans
 table_items:
-- {_type: TableFormItem, label: 2014-15, location: /Documents/02. Built Environment
-    Performance Plans, modified_date: '6/6/2014 4:16 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15,
+- {label: 2014-15, location: /Documents/02. Built Environment Performance Plans, modified_date: '6/6/2014
+    4:16 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 2015-16, location: /Documents/02. Built Environment
-    Performance Plans, modified_date: '11/6/2014 12:13 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16,
+- {label: 2015-16, location: /Documents/02. Built Environment Performance Plans, modified_date: '11/6/2014
+    12:13 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 2016-17, location: /Documents/02. Built Environment
-    Performance Plans, modified_date: '11/5/2015 4:26 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17,
+- {label: 2016-17, location: /Documents/02. Built Environment Performance Plans, modified_date: '11/5/2015
+    4:26 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17,
+  type: table_form_item, user: Elsabe Rossouw}
+- {label: 2017-18, location: /Documents/02. Built Environment Performance Plans, modified_date: '8/22/2016
+    1:40 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2017-18,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
