--- a/Media_Releases/index.html
+++ b/Media_Releases/index.html
@@ -1,7 +1,7 @@
 ---
-{breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
-    href="/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Publications
-    and Media Releases</span></span>, layout: default, original_url: 'http://mfma.treasury.gov.za/Media_Releases/Pages/default.aspx',
+{breadcrumbs: '<span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
+    href="http://mfma.treasury.gov.za/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Publications
+    and Media Releases</span></span>', layout: default, original_url: 'http://mfma.treasury.gov.za/Media_Releases/Pages/default.aspx',
   title: Publications and Media Releases}
 
 ---
@@ -51,6 +51,10 @@
 <tr>
 <td><img src="/PublishingImages/Folder.jpg"/></td>
 <td><a href="http://mfma.treasury.gov.za/Media_Releases/Reports%20to%20Parliament/Pages/default.aspx"><font>Reports to Parliament</font> </a></td>
+<td></td></tr>
+<tr>
+<td><img src="/PublishingImages/Folder.jpg"/></td>
+<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Borrowing%20Bulletin/Pages/default.aspx"><font>Municipal Borrowing Bulletin</font></a> </td>
 <td></td></tr>
 <tr>
 <td></td>
