--- a/RegulationsandGazettes/index.html
+++ b/RegulationsandGazettes/index.html
@@ -1,7 +1,7 @@
 ---
-{breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
-    href="/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Regulations
-    and Gazettes</span></span>, layout: default, original_url: 'http://mfma.treasury.gov.za/RegulationsandGazettes/Pages/default.aspx',
+{breadcrumbs: '<span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
+    href="http://mfma.treasury.gov.za/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Regulations
+    and Gazettes</span></span>', layout: default, original_url: 'http://mfma.treasury.gov.za/RegulationsandGazettes/Pages/default.aspx',
   title: Regulations and Gazettes}
 
 ---
@@ -65,9 +65,9 @@
 <td><strong><br>Gazettes</br></strong></td>
 <td></td></tr>
 <tr>
-<td></td>
-<td></td>
-<td></td></tr>
+<td><img src="/PublishingImages/pdfnew.gif"/></td>
+<td><span><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/Documents/40021_27-5_NationalGovernment.pdf" target="_blank"><span>Government Gazette 40021 dated 27 May 2016 – Publication of Government Gazette in terms of Section 16 (1) of the Division of Revenue Act, 2016</span></a></span></td>
+<td>(35,647kb)</td></tr>
 <tr>
 <td><img src="/PublishingImages/pdfnew.gif"/></td>
 <td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/Documents/Government%20Gazette%2040035%20dated%202%20June%202016.pdf" target="_blank">Government Gazette 40035 dated 2 June 2016 - Publication of allocations to pre-election municipalities in terms of Section 38 of the Division of Revenue Act</a></td>
