--- a/Return_Forms/index.html
+++ b/Return_Forms/index.html
@@ -1,7 +1,7 @@
 ---
-{breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
-    href="/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Return
-    Forms</span></span>, layout: default, original_url: 'http://mfma.treasury.gov.za/Return_Forms/Pages/default.aspx',
+{breadcrumbs: '<span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
+    href="http://mfma.treasury.gov.za/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Return
+    Forms</span></span>', layout: default, original_url: 'http://mfma.treasury.gov.za/Return_Forms/Pages/default.aspx',
   title: Return Forms}
 
 ---
@@ -272,6 +272,12 @@
 <tr>
 <td><img src="/PublishingImages/excel_icon.gif"/></td>
 <td><a href="http://mfma.treasury.gov.za/Return_Forms/Documents/Muncde_MHSG_ccyy_Mnn.xls"><font>Municipal Human Settlements Capacity Grant</font></a></td>
+<td>(68kb)</td></tr>
+<tr>
+<td><img src="/PublishingImages/excel_icon.gif"/></td>
+<td><a href="http://mfma.treasury.gov.za/Return_Forms/Documents/Muncde_WSIG_ccyy_Mnn.xls">
+<p><font>Municipal Services Infrastructure Grant</font></p>
+<p></p></a> </td>
 <td>(68kb)</td></tr>
 <tr>
 <td></td>
