--- a/Documents/04. Service Delivery and Budget Implementation Plans/index.html
+++ b/Documents/04. Service Delivery and Budget Implementation Plans/index.html
@@ -7,32 +7,32 @@ layout: default
 original_url: http://mfma.treasury.gov.za/Documents/04. Service Delivery and Budget
   Implementation Plans
 table_items:
-- {_type: TableFormItem, label: 2008-09, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans, modified_date: '7/30/2010 3:33 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2008-09,
+- {label: 2008-09, location: /Documents/04. Service Delivery and Budget Implementation
+    Plans, modified_date: '7/30/2010 3:33 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2008-09,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 2009-10, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans, modified_date: '6/29/2010 2:25 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2009-10,
+- {label: 2009-10, location: /Documents/04. Service Delivery and Budget Implementation
+    Plans, modified_date: '6/29/2010 2:25 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2009-10,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 2010-11, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans, modified_date: '6/24/2010 10:08 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2010-11,
+- {label: 2010-11, location: /Documents/04. Service Delivery and Budget Implementation
+    Plans, modified_date: '6/24/2010 10:08 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2010-11,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 2011-12, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans, modified_date: '5/27/2011 11:43 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2011-12,
+- {label: 2011-12, location: /Documents/04. Service Delivery and Budget Implementation
+    Plans, modified_date: '5/27/2011 11:43 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2011-12,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 2012-13, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans, modified_date: '4/19/2012 9:09 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2012-13,
+- {label: 2012-13, location: /Documents/04. Service Delivery and Budget Implementation
+    Plans, modified_date: '4/19/2012 9:09 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2012-13,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 2013-14, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans, modified_date: '4/22/2013 12:10 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2013-14,
+- {label: 2013-14, location: /Documents/04. Service Delivery and Budget Implementation
+    Plans, modified_date: '4/22/2013 12:10 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2013-14,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 2014-15, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans, modified_date: '5/22/2014 2:41 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2014-15,
+- {label: 2014-15, location: /Documents/04. Service Delivery and Budget Implementation
+    Plans, modified_date: '5/22/2014 2:41 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2014-15,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 2015-16, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans, modified_date: '4/17/2015 1:58 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2015-16,
+- {label: 2015-16, location: /Documents/04. Service Delivery and Budget Implementation
+    Plans, modified_date: '4/17/2015 1:58 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2015-16,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 2016-17, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans, modified_date: '3/11/2016 11:01 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2016-17,
+- {label: 2016-17, location: /Documents/04. Service Delivery and Budget Implementation
+    Plans, modified_date: '3/11/2016 11:01 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2016-17,
   type: table_form_item, user: Lawrence Gqesha}
 title: null
 
