--- a/Guidelines/index.html
+++ b/Guidelines/index.html
@@ -1,6 +1,6 @@
 ---
-{breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
-    href="/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Guidelines</span></span>,
+{breadcrumbs: '<span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
+    href="http://mfma.treasury.gov.za/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Guidelines</span></span>',
   layout: default, original_url: 'http://mfma.treasury.gov.za/Guidelines/Pages/default.aspx',
   title: Guidelines}
 
@@ -18,6 +18,10 @@
 <td><font></font></td></tr>
 <tr>
 <td><img src="/PublishingImages/foldernew.gif"/></td>
+<td><a href="http://mfma.treasury.gov.za/Guidelines/Documents/Municipal%20Costing%20Guide"><font>Costing Methodology Guideline for Local Government</font></a></td>
+<td></td></tr>
+<tr>
+<td><img src="/PublishingImages/Folder.jpg"/></td>
 <td><font><font><a href="http://mfma.treasury.gov.za/Guidelines/Pages/GuideToMunicipalAnnualReportsJuly2012.aspx"><font>Guide to Municipal Annual Reports – July 2012</font></a></font></font></td>
 <td></td></tr>
 <tr>
