--- a/Pages/UrbanZone/index.html
+++ b/Pages/UrbanZone/index.html
@@ -1,7 +1,7 @@
 ---
-{breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
-    href="/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Urban
-    Zone</span></span>, layout: default, original_url: 'http://mfma.treasury.gov.za/Pages/UrbanZone.aspx',
+{breadcrumbs: '<span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
+    href="http://mfma.treasury.gov.za/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Urban
+    Zone</span></span>', layout: default, original_url: 'http://mfma.treasury.gov.za/Pages/UrbanZone.aspx',
   title: Urban Zone}
 
 ---
