--- a/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/index.html
+++ b/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/index.html
@@ -1,9 +1,9 @@
 ---
-{breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
-    href="/">MFMA</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
-    href="/RegulationsandGazettes/">Regulations and Gazettes</a></span><span> &gt;
-    </span><span class="breadcrumbCurrent">Municipal Regulations On A Standard Chart
-    Of Accounts</span></span>, layout: default, original_url: 'http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Pages/default.aspx',
+{breadcrumbs: '<span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
+    href="http://mfma.treasury.gov.za/">MFMA</a></span><span> &gt; </span><span><a
+    class="ms-sitemapdirectional" href="http://mfma.treasury.gov.za/RegulationsandGazettes/">Regulations
+    and Gazettes</a></span><span> &gt; </span><span class="breadcrumbCurrent">Municipal
+    Regulations On A Standard Chart Of Accounts</span></span>', layout: default, original_url: 'http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Pages/default.aspx',
   title: Municipal Regulations On A Standard Chart Of Accounts}
 
 ---
@@ -58,55 +58,25 @@
 <td></td></tr>
 <tr>
 <td></td>
-<td><strong><u>SCOA Segment Detail - (Version 5.4) Excel Versions:</u></strong></td>
+<td><strong><u><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Version%205.4"><strong><u><font>SCOA Segment Detail - (Version 5.4) Excel Versions</font></u></strong></a></u></strong></td>
 <td></td></tr>
 <tr>
-<td><img src="/PublishingImages/excel_icon.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/01_Costing%20V5.4%20Final.xls" target="_blank"><font>01 - Costing - V5.4 - 3 December 2015</font></a></td>
-<td><font>(160 kb)</font></td></tr>
-<tr>
-<td><img src="/PublishingImages/excel_icon.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/02_Function%20V5.4%20Final.xls" target="_blank"><font>02 - Function - V5.4 - 3 December 2015</font></a></td>
-<td><font>(290 kb)</font></td></tr>
-<tr>
-<td><img src="/PublishingImages/excel_icon.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/03_Fund%20V5.4%20Final.xls"><font>03 - Fund - V5.4 - 3 December 2015</font></a></td>
-<td><font>(2,856 kb)</font></td></tr>
-<tr>
-<td><img src="/PublishingImages/excel_icon.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/04_Item%20Lbl%20%20V5.4%20%20Final.xls" target="_blank"><font>04 - Item Lbl - V5.4 - 3 December 2015</font></a></td>
-<td><font>(27,475kb)</font></td></tr>
-<tr>
-<td><img src="/PublishingImages/excel_icon.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/05_Item%20Exp%20V5.4%20Final.xls" target="_blank"><font>05 - Item Exp - V5.4 - 3 December 2015</font></a></td>
-<td><font>(14,604kb)</font></td></tr>
-<tr>
-<td><img src="/PublishingImages/excel_icon.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/06_Item%20Gains%20and%20Losses%20V5.4%20Final.xls"><font>06 - Item Gains and Losses - V5.4 - 3 December 2015</font></a></td>
-<td><font>(391 kb)</font></td></tr>
-<tr>
-<td><img src="/PublishingImages/excel_icon.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/07_Item%20Revenue%20V5.4%20Final.xls" target="_blank"><font>07 - Item Revenue - V5.4 - 3 December 2015</font></a></td>
-<td><font>(12,817kb)</font></td></tr>
-<tr>
-<td><img src="/PublishingImages/excel_icon.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/08_Project%20V5.4%20Final.xls"><font>08 - Project - V5.4 - 3 December 2015</font></a></td>
-<td><font>(724kb)</font></td></tr>
-<tr>
-<td><img src="/PublishingImages/excel_icon.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/09_Regional%20V5.4%20Final.xls"><font>09 - Regional - V5.4 - 3 December 2015</font></a></td>
-<td><font>(1,049kb)</font></td></tr>
-<tr>
-<td><img src="/PublishingImages/excel_icon.gif"> </img></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02.%20mSCOA%20ICF/07.%20mSCOA%20ICF%20(1%20December%202015)/SCOA%20v5.4%20take%205/Excel%20SCOA/10_Item%20Assets%20V5.4%20Final.xls"><font>10 - Item Assets - V5.4 - 3 December 2015</font></a></td>
-<td> (36,430kb)</td></tr>
+<td></td>
+<td>
+<p> </p>
+<p><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Version%205.5_1"><strong><u><font><strong><u>SCOA Segment Detail - (Version 5.5) Excel Versions</u></strong> for technical evaluation purposes only</font></u></strong></a></p></td>
+<td></td></tr>
 <tr>
 <td></td>
-<td>   </td>
+<td>
+<p><strong><u></u></strong> </p>
+<p><strong><u><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Version%206"><strong><u><font>SCOA Segment Detail - (Version 6) for implementation 2017/18 MTREF</font></u></strong></a></u></strong></p></td>
 <td></td></tr>
 <tr>
 <td> </td>
-<td><strong><u><span>Comment Register:</span></u></strong></td>
+<td>
+<p><strong><u><span></span></u></strong> </p>
+<p><strong><u><span>Comment Register:</span></u></strong></p></td>
 <td> </td></tr>
 <tr>
 <td><img src="/PublishingImages/excel_icon.gif"/></td>
@@ -154,7 +124,7 @@
 <td></td></tr>
 <tr>
 <td></td>
-<td></td>
+<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/IMFO Conference 11-12 July 2016"><font>08. IMFO Conference 11-12 July 2016</font></a></td>
 <td></td></tr>
 <tr>
 <td></td>
