new item per page format

--- a/Documents/01. Integrated Development Plans/2008-09/index.html
+++ b/Documents/01. Integrated Development Plans/2008-09/index.html
@@ -8,11 +8,9 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/01. Integrated Development Plans/2008-09
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/01. Integrated Development
-    Plans/2008-09, modified_date: '11/22/2011 1:45 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2008-09/01.%20Metros,
+- {label: 01. Metros, modified_date: '11/22/2011 1:45 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2008-09/01.%20Metros,
   type: table_form_item, user: Sylvester Mohloli}
-- {_type: TableFormItem, label: 03. District municipalities, location: /Documents/01.
-    Integrated Development Plans/2008-09, modified_date: '11/22/2011 1:36 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2008-09/03.%20District%20municipalities,
+- {label: 03. District municipalities, modified_date: '11/22/2011 1:36 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2008-09/03.%20District%20municipalities,
   type: table_form_item, user: Sylvester Mohloli}
 title: null
 
