--- a/Documents/01. Integrated Development Plans/2013-14/index.html
+++ b/Documents/01. Integrated Development Plans/2013-14/index.html
@@ -8,14 +8,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/01. Integrated Development Plans/2013-14
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/01. Integrated Development
-    Plans/2013-14, modified_date: '11/19/2013 12:49 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2013-14/01.%20Metros,
+- {label: 01. Metros, modified_date: '11/19/2013 12:49 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2013-14/01.%20Metros,
   type: table_form_item, user: Sylvester Mohloli}
-- {_type: TableFormItem, label: 02. Local Municipalities, location: /Documents/01.
-    Integrated Development Plans/2013-14, modified_date: '11/29/2013 12:14 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2013-14/02.%20Local%20Municipalities,
+- {label: 02. Local Municipalities, modified_date: '11/29/2013 12:14 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2013-14/02.%20Local%20Municipalities,
   type: table_form_item, user: Sylvester Mohloli}
-- {_type: TableFormItem, label: 03. District Municipalities, location: /Documents/01.
-    Integrated Development Plans/2013-14, modified_date: '11/20/2013 12:20 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2013-14/03.%20District%20Municipalities,
+- {label: 03. District Municipalities, modified_date: '11/20/2013 12:20 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2013-14/03.%20District%20Municipalities,
   type: table_form_item, user: Sylvester Mohloli}
 title: null
 
