--- a/Documents/01. Integrated Development Plans/2014-15/index.html
+++ b/Documents/01. Integrated Development Plans/2014-15/index.html
@@ -8,14 +8,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/01. Integrated Development Plans/2014-15
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/01. Integrated Development
-    Plans/2014-15, modified_date: '5/27/2014 2:32 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2014-15/01.%20Metros,
+- {label: 01. Metros, modified_date: '5/27/2014 2:32 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2014-15/01.%20Metros,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 02 Local Municipalities, location: /Documents/01.
-    Integrated Development Plans/2014-15, modified_date: '7/2/2014 11:13 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2014-15/02%20Local%20Municipalities,
+- {label: 02 Local Municipalities, modified_date: '7/2/2014 11:13 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2014-15/02%20Local%20Municipalities,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 03. Districts, location: /Documents/01. Integrated
-    Development Plans/2014-15, modified_date: '5/27/2014 2:32 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2014-15/03.%20Districts,
+- {label: 03. Districts, modified_date: '5/27/2014 2:32 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2014-15/03.%20Districts,
   type: table_form_item, user: Lawrence Gqesha}
 title: null
 
