--- a/Documents/01. Integrated Development Plans/2016-17/index.html
+++ b/Documents/01. Integrated Development Plans/2016-17/index.html
@@ -8,14 +8,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/01. Integrated Development Plans/2016-17
 table_items:
-- {_type: TableFormItem, label: 01. Metro, location: /Documents/01. Integrated Development
-    Plans/2016-17, modified_date: '5/17/2016 11:43 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2016-17/01.%20Metro,
+- {label: 01. Metro, modified_date: '5/17/2016 11:43 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2016-17/01.%20Metro,
   type: table_form_item, user: Sephiri Tlhomeli}
-- {_type: TableFormItem, label: 02. Local Municipalities, location: /Documents/01.
-    Integrated Development Plans/2016-17, modified_date: '5/17/2016 11:49 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2016-17/02.%20Local%20Municipalities,
+- {label: 02. Local Municipalities, modified_date: '5/17/2016 11:49 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2016-17/02.%20Local%20Municipalities,
   type: table_form_item, user: Sephiri Tlhomeli}
-- {_type: TableFormItem, label: 03. District municipalities, location: /Documents/01.
-    Integrated Development Plans/2016-17, modified_date: '5/17/2016 11:45 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2016-17/03.%20District%20municipalities,
+- {label: 03. District municipalities, modified_date: '5/17/2016 11:45 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2016-17/03.%20District%20municipalities,
   type: table_form_item, user: Sephiri Tlhomeli}
 title: null
 
