--- a/Documents/02. Built Environment Performance Plans/2016-17/index.html
+++ b/Documents/02. Built Environment Performance Plans/2016-17/index.html
@@ -9,11 +9,12 @@ layout: default
 original_url: http://mfma.treasury.gov.za/Documents/02. Built Environment Performance
   Plans/2016-17
 table_items:
-- {_type: TableFormItem, label: Draft, location: /Documents/02. Built Environment
-    Performance Plans/2016-17, modified_date: '11/5/2015 4:27 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Draft,
+- {label: Draft, modified_date: '11/5/2015 4:27 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Draft,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: Final, location: /Documents/02. Built Environment
-    Performance Plans/2016-17, modified_date: '6/7/2016 12:50 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Final,
+- {label: Final, modified_date: '6/7/2016 12:50 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Final,
+  type: table_form_item, user: Elsabe Rossouw}
+- {label: Support Documents for Cons Eval Report, modified_date: '8/22/2016 2:33 PM',
+  path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Support%20Documents%20for%20Cons%20Eval%20Report,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
