--- a/Documents/03. Budget Documentation/2012-13/index.html
+++ b/Documents/03. Budget Documentation/2012-13/index.html
@@ -7,11 +7,9 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/03. Budget Documentation/2012-13
 table_items:
-- {_type: TableFormItem, label: Adopted budgets, location: /Documents/03. Budget Documentation/2012-13,
-  modified_date: '6/8/2012 9:34 AM', path: /Documents/03.%20Budget%20Documentation/2012-13/Adopted%20budgets,
+- {label: Adopted budgets, modified_date: '6/8/2012 9:34 AM', path: /Documents/03.%20Budget%20Documentation/2012-13/Adopted%20budgets,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: Tabled Budgets, location: /Documents/03. Budget Documentation/2012-13,
-  modified_date: '4/11/2012 3:10 PM', path: /Documents/03.%20Budget%20Documentation/2012-13/Tabled%20Budgets,
+- {label: Tabled Budgets, modified_date: '4/11/2012 3:10 PM', path: /Documents/03.%20Budget%20Documentation/2012-13/Tabled%20Budgets,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
