--- a/Documents/04. Service Delivery and Budget Implementation Plans/2008-09/index.html
+++ b/Documents/04. Service Delivery and Budget Implementation Plans/2008-09/index.html
@@ -9,12 +9,9 @@ layout: default
 original_url: http://mfma.treasury.gov.za/Documents/04. Service Delivery and Budget
   Implementation Plans/2008-09
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans/2008-09, modified_date: '7/30/2010 3:32 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2008-09/01.%20Metros,
+- {label: 01. Metros, modified_date: '7/30/2010 3:32 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2008-09/01.%20Metros,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 02. Local municipalities, location: /Documents/04.
-    Service Delivery and Budget Implementation Plans/2008-09, modified_date: '7/30/2010
-    3:35 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2008-09/02.%20Local%20municipalities,
+- {label: 02. Local municipalities, modified_date: '7/30/2010 3:35 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2008-09/02.%20Local%20municipalities,
   type: table_form_item, user: Lawrence Gqesha}
 title: null
 
