--- a/Documents/04. Service Delivery and Budget Implementation Plans/2014-15/index.html
+++ b/Documents/04. Service Delivery and Budget Implementation Plans/2014-15/index.html
@@ -9,15 +9,11 @@ layout: default
 original_url: http://mfma.treasury.gov.za/Documents/04. Service Delivery and Budget
   Implementation Plans/2014-15
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans/2014-15, modified_date: '5/27/2014 11:50 AM',
-  path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2014-15/01.%20Metros,
+- {label: 01. Metros, modified_date: '5/27/2014 11:50 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2014-15/01.%20Metros,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 02. Locals, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans/2014-15, modified_date: '6/2/2014 10:50 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2014-15/02.%20Locals,
+- {label: 02. Locals, modified_date: '6/2/2014 10:50 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2014-15/02.%20Locals,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 03. Districts, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans/2014-15, modified_date: '6/2/2014 10:37 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2014-15/03.%20Districts,
+- {label: 03. Districts, modified_date: '6/2/2014 10:37 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2014-15/03.%20Districts,
   type: table_form_item, user: Lawrence Gqesha}
 title: null
 
