--- a/Documents/04. Service Delivery and Budget Implementation Plans/2016-17/index.html
+++ b/Documents/04. Service Delivery and Budget Implementation Plans/2016-17/index.html
@@ -9,17 +9,11 @@ layout: default
 original_url: http://mfma.treasury.gov.za/Documents/04. Service Delivery and Budget
   Implementation Plans/2016-17
 table_items:
-- {_type: TableFormItem, label: 01. Metro, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans/2016-17, modified_date: '3/11/2016 11:02 AM',
-  path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2016-17/01.%20Metro,
+- {label: 01. Metro, modified_date: '3/11/2016 11:02 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2016-17/01.%20Metro,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 02. Locals, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans/2016-17, modified_date: '3/11/2016 11:02 AM',
-  path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2016-17/02.%20Locals,
+- {label: 02. Locals, modified_date: '3/11/2016 11:02 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2016-17/02.%20Locals,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 03. District, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans/2016-17, modified_date: '3/11/2016 11:02 AM',
-  path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2016-17/03.%20District,
+- {label: 03. District, modified_date: '3/11/2016 11:02 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2016-17/03.%20District,
   type: table_form_item, user: Lawrence Gqesha}
 title: null
 
