--- a/Documents/05. Annual Financial Statements/2007-08/index.html
+++ b/Documents/05. Annual Financial Statements/2007-08/index.html
@@ -8,14 +8,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/05. Annual Financial Statements/2007-08
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/05. Annual Financial
-    Statements/2007-08, modified_date: '7/5/2010 3:06 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2007-08/01.%20Metros,
+- {label: 01. Metros, modified_date: '7/5/2010 3:06 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2007-08/01.%20Metros,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 02. Local Municipalities, location: /Documents/05.
-    Annual Financial Statements/2007-08, modified_date: '7/5/2010 3:06 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2007-08/02.%20Local%20Municipalities,
+- {label: 02. Local Municipalities, modified_date: '7/5/2010 3:06 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2007-08/02.%20Local%20Municipalities,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 03. District Municipalities, location: /Documents/05.
-    Annual Financial Statements/2007-08, modified_date: '7/5/2010 3:06 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2007-08/03.%20District%20Municipalities,
+- {label: 03. District Municipalities, modified_date: '7/5/2010 3:06 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2007-08/03.%20District%20Municipalities,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
