--- a/Documents/05. Annual Financial Statements/2010-11/index.html
+++ b/Documents/05. Annual Financial Statements/2010-11/index.html
@@ -8,14 +8,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/05. Annual Financial Statements/2010-11
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/05. Annual Financial
-    Statements/2010-11, modified_date: '9/5/2011 11:24 AM', path: /Documents/05.%20Annual%20Financial%20Statements/2010-11/01.%20Metros,
+- {label: 01. Metros, modified_date: '9/5/2011 11:24 AM', path: /Documents/05.%20Annual%20Financial%20Statements/2010-11/01.%20Metros,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 02. Local Municipalities, location: /Documents/05.
-    Annual Financial Statements/2010-11, modified_date: '9/5/2011 12:14 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2010-11/02.%20Local%20Municipalities,
+- {label: 02. Local Municipalities, modified_date: '9/5/2011 12:14 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2010-11/02.%20Local%20Municipalities,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 03. District municipalities, location: /Documents/05.
-    Annual Financial Statements/2010-11, modified_date: '9/7/2011 3:57 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2010-11/03.%20District%20municipalities,
+- {label: 03. District municipalities, modified_date: '9/7/2011 3:57 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2010-11/03.%20District%20municipalities,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
