--- a/Documents/05. Annual Financial Statements/2012-13/index.html
+++ b/Documents/05. Annual Financial Statements/2012-13/index.html
@@ -8,11 +8,9 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/05. Annual Financial Statements/2012-13
 table_items:
-- {_type: TableFormItem, label: Audited, location: /Documents/05. Annual Financial
-    Statements/2012-13, modified_date: '11/13/2013 11:49 AM', path: /Documents/05.%20Annual%20Financial%20Statements/2012-13/Audited,
+- {label: Audited, modified_date: '11/13/2013 11:49 AM', path: /Documents/05.%20Annual%20Financial%20Statements/2012-13/Audited,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: Pre-audited, location: /Documents/05. Annual Financial
-    Statements/2012-13, modified_date: '9/12/2013 3:12 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2012-13/Pre-audited,
+- {label: Pre-audited, modified_date: '9/12/2013 3:12 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2012-13/Pre-audited,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
