--- a/Documents/06. Annual Reports/2010-11/index.html
+++ b/Documents/06. Annual Reports/2010-11/index.html
@@ -7,14 +7,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/06. Annual Reports/2010-11
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/06. Annual Reports/2010-11,
-  modified_date: '1/30/2012 2:20 PM', path: /Documents/06.%20Annual%20Reports/2010-11/01.%20Metros,
+- {label: 01. Metros, modified_date: '1/30/2012 2:20 PM', path: /Documents/06.%20Annual%20Reports/2010-11/01.%20Metros,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 02. Local Municipalities, location: /Documents/06.
-    Annual Reports/2010-11, modified_date: '1/30/2012 2:21 PM', path: /Documents/06.%20Annual%20Reports/2010-11/02.%20Local%20Municipalities,
+- {label: 02. Local Municipalities, modified_date: '1/30/2012 2:21 PM', path: /Documents/06.%20Annual%20Reports/2010-11/02.%20Local%20Municipalities,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 03. District Municipalities, location: /Documents/06.
-    Annual Reports/2010-11, modified_date: '1/30/2012 2:21 PM', path: /Documents/06.%20Annual%20Reports/2010-11/03.%20District%20Municipalities,
+- {label: 03. District Municipalities, modified_date: '1/30/2012 2:21 PM', path: /Documents/06.%20Annual%20Reports/2010-11/03.%20District%20Municipalities,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
