--- a/Documents/01. Integrated Development Plans/2006-07/index.html
+++ b/Documents/01. Integrated Development Plans/2006-07/index.html
@@ -8,14 +8,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/01. Integrated Development Plans/2006-07
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/01. Integrated Development
-    Plans/2006-07, modified_date: '11/21/2011 10:27 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2006-07/01.%20Metros,
+- {label: 01. Metros, modified_date: '11/21/2011 10:27 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2006-07/01.%20Metros,
   type: table_form_item, user: Sylvester Mohloli}
-- {_type: TableFormItem, label: 02. Local Municipalities, location: /Documents/01.
-    Integrated Development Plans/2006-07, modified_date: '11/21/2011 10:26 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2006-07/02.%20Local%20Municipalities,
+- {label: 02. Local Municipalities, modified_date: '11/21/2011 10:26 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2006-07/02.%20Local%20Municipalities,
   type: table_form_item, user: Sylvester Mohloli}
-- {_type: TableFormItem, label: 03. District Municipalities, location: /Documents/01.
-    Integrated Development Plans/2006-07, modified_date: '11/21/2011 10:26 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2006-07/03.%20District%20Municipalities,
+- {label: 03. District Municipalities, modified_date: '11/21/2011 10:26 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2006-07/03.%20District%20Municipalities,
   type: table_form_item, user: Sylvester Mohloli}
 title: null
 
