--- a/Documents/01. Integrated Development Plans/2009-10/index.html
+++ b/Documents/01. Integrated Development Plans/2009-10/index.html
@@ -8,11 +8,9 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/01. Integrated Development Plans/2009-10
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/01. Integrated Development
-    Plans/2009-10, modified_date: '11/22/2011 1:53 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2009-10/01.%20Metros,
+- {label: 01. Metros, modified_date: '11/22/2011 1:53 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2009-10/01.%20Metros,
   type: table_form_item, user: Sylvester Mohloli}
-- {_type: TableFormItem, label: 03. District Municipalities, location: /Documents/01.
-    Integrated Development Plans/2009-10, modified_date: '11/22/2011 1:55 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2009-10/03.%20District%20Municipalities,
+- {label: 03. District Municipalities, modified_date: '11/22/2011 1:55 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2009-10/03.%20District%20Municipalities,
   type: table_form_item, user: Sylvester Mohloli}
 title: null
 
