--- a/Documents/01. Integrated Development Plans/2011-12/index.html
+++ b/Documents/01. Integrated Development Plans/2011-12/index.html
@@ -8,14 +8,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/01. Integrated Development Plans/2011-12
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/01. Integrated Development
-    Plans/2011-12, modified_date: '4/12/2012 3:53 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2011-12/01.%20Metros,
+- {label: 01. Metros, modified_date: '4/12/2012 3:53 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2011-12/01.%20Metros,
   type: table_form_item, user: Sylvester Mohloli}
-- {_type: TableFormItem, label: 02. Local Municipalities, location: /Documents/01.
-    Integrated Development Plans/2011-12, modified_date: '5/30/2011 4:30 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2011-12/02.%20Local%20Municipalities,
+- {label: 02. Local Municipalities, modified_date: '5/30/2011 4:30 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2011-12/02.%20Local%20Municipalities,
   type: table_form_item, user: Sylvester Mohloli}
-- {_type: TableFormItem, label: 03. District Municipalities, location: /Documents/01.
-    Integrated Development Plans/2011-12, modified_date: '4/12/2012 3:56 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2011-12/03.%20District%20Municipalities,
+- {label: 03. District Municipalities, modified_date: '4/12/2012 3:56 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2011-12/03.%20District%20Municipalities,
   type: table_form_item, user: Sylvester Mohloli}
 title: null
 
