--- a/Documents/01. Integrated Development Plans/2012-13/index.html
+++ b/Documents/01. Integrated Development Plans/2012-13/index.html
@@ -8,14 +8,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/01. Integrated Development Plans/2012-13
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/01. Integrated Development
-    Plans/2012-13, modified_date: '3/11/2013 2:49 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2012-13/01.%20Metros,
+- {label: 01. Metros, modified_date: '3/11/2013 2:49 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2012-13/01.%20Metros,
   type: table_form_item, user: Sylvester Mohloli}
-- {_type: TableFormItem, label: 02. Local municipalities, location: /Documents/01.
-    Integrated Development Plans/2012-13, modified_date: '3/15/2013 3:49 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2012-13/02.%20Local%20municipalities,
+- {label: 02. Local municipalities, modified_date: '3/15/2013 3:49 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2012-13/02.%20Local%20municipalities,
   type: table_form_item, user: Sylvester Mohloli}
-- {_type: TableFormItem, label: 03. District municipalities, location: /Documents/01.
-    Integrated Development Plans/2012-13, modified_date: '3/12/2013 1:53 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2012-13/03.%20District%20municipalities,
+- {label: 03. District municipalities, modified_date: '3/12/2013 1:53 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2012-13/03.%20District%20municipalities,
   type: table_form_item, user: Sylvester Mohloli}
 title: null
 
