--- a/Documents/02. Built Environment Performance Plans/2015-16/index.html
+++ b/Documents/02. Built Environment Performance Plans/2015-16/index.html
@@ -9,11 +9,9 @@ layout: default
 original_url: http://mfma.treasury.gov.za/Documents/02. Built Environment Performance
   Plans/2015-16
 table_items:
-- {_type: TableFormItem, label: Draft, location: /Documents/02. Built Environment
-    Performance Plans/2015-16, modified_date: '11/6/2014 12:13 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Draft,
+- {label: Draft, modified_date: '11/6/2014 12:13 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Draft,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: Final, location: /Documents/02. Built Environment
-    Performance Plans/2015-16, modified_date: '6/4/2015 1:21 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final,
+- {label: Final, modified_date: '6/4/2015 1:21 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
