--- a/Documents/03. Budget Documentation/2010-11/index.html
+++ b/Documents/03. Budget Documentation/2010-11/index.html
@@ -7,17 +7,13 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/03. Budget Documentation/2010-11
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/03. Budget Documentation/2010-11,
-  modified_date: '1/21/2011 4:14 PM', path: /Documents/03.%20Budget%20Documentation/2010-11/01.%20Metros,
+- {label: 01. Metros, modified_date: '1/21/2011 4:14 PM', path: /Documents/03.%20Budget%20Documentation/2010-11/01.%20Metros,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 02. Local Municipalities, location: /Documents/03.
-    Budget Documentation/2010-11, modified_date: '1/28/2011 3:47 PM', path: /Documents/03.%20Budget%20Documentation/2010-11/02.%20Local%20Municipalities,
+- {label: 02. Local Municipalities, modified_date: '1/28/2011 3:47 PM', path: /Documents/03.%20Budget%20Documentation/2010-11/02.%20Local%20Municipalities,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 03. District Municipalities, location: /Documents/03.
-    Budget Documentation/2010-11, modified_date: '2/25/2011 11:26 AM', path: /Documents/03.%20Budget%20Documentation/2010-11/03.%20District%20Municipalities,
+- {label: 03. District Municipalities, modified_date: '2/25/2011 11:26 AM', path: /Documents/03.%20Budget%20Documentation/2010-11/03.%20District%20Municipalities,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 04. Revised Budgets, location: /Documents/03. Budget
-    Documentation/2010-11, modified_date: '2/25/2011 11:27 AM', path: /Documents/03.%20Budget%20Documentation/2010-11/04.%20Revised%20Budgets,
+- {label: 04. Revised Budgets, modified_date: '2/25/2011 11:27 AM', path: /Documents/03.%20Budget%20Documentation/2010-11/04.%20Revised%20Budgets,
   type: table_form_item, user: Lawrence Gqesha}
 title: null
 
