--- a/Documents/03. Budget Documentation/2011-12/index.html
+++ b/Documents/03. Budget Documentation/2011-12/index.html
@@ -7,14 +7,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/03. Budget Documentation/2011-12
 table_items:
-- {_type: TableFormItem, label: 01. Tabled Budgets, location: /Documents/03. Budget
-    Documentation/2011-12, modified_date: '5/24/2012 12:04 PM', path: /Documents/03.%20Budget%20Documentation/2011-12/01.%20Tabled%20Budgets,
+- {label: 01. Tabled Budgets, modified_date: '5/24/2012 12:04 PM', path: /Documents/03.%20Budget%20Documentation/2011-12/01.%20Tabled%20Budgets,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 02. Adopted Budgets, location: /Documents/03. Budget
-    Documentation/2011-12, modified_date: '5/24/2012 12:04 PM', path: /Documents/03.%20Budget%20Documentation/2011-12/02.%20Adopted%20Budgets,
+- {label: 02. Adopted Budgets, modified_date: '5/24/2012 12:04 PM', path: /Documents/03.%20Budget%20Documentation/2011-12/02.%20Adopted%20Budgets,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 03. Revised Budgets, location: /Documents/03. Budget
-    Documentation/2011-12, modified_date: '5/25/2012 11:58 AM', path: /Documents/03.%20Budget%20Documentation/2011-12/03.%20Revised%20Budgets,
+- {label: 03. Revised Budgets, modified_date: '5/25/2012 11:58 AM', path: /Documents/03.%20Budget%20Documentation/2011-12/03.%20Revised%20Budgets,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
