--- a/Documents/03. Budget Documentation/2013-14/index.html
+++ b/Documents/03. Budget Documentation/2013-14/index.html
@@ -7,14 +7,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/03. Budget Documentation/2013-14
 table_items:
-- {_type: TableFormItem, label: 01. Tabled budgets, location: /Documents/03. Budget
-    Documentation/2013-14, modified_date: '4/29/2013 10:28 AM', path: /Documents/03.%20Budget%20Documentation/2013-14/01.%20Tabled%20budgets,
+- {label: 01. Tabled budgets, modified_date: '4/29/2013 10:28 AM', path: /Documents/03.%20Budget%20Documentation/2013-14/01.%20Tabled%20budgets,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 02. Adopted budgets, location: /Documents/03. Budget
-    Documentation/2013-14, modified_date: '6/18/2013 11:33 AM', path: /Documents/03.%20Budget%20Documentation/2013-14/02.%20Adopted%20budgets,
+- {label: 02. Adopted budgets, modified_date: '6/18/2013 11:33 AM', path: /Documents/03.%20Budget%20Documentation/2013-14/02.%20Adopted%20budgets,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 03. Revised budgets, location: /Documents/03. Budget
-    Documentation/2013-14, modified_date: '2/18/2014 10:49 AM', path: /Documents/03.%20Budget%20Documentation/2013-14/03.%20Revised%20budgets,
+- {label: 03. Revised budgets, modified_date: '2/18/2014 10:49 AM', path: /Documents/03.%20Budget%20Documentation/2013-14/03.%20Revised%20budgets,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
