--- a/Documents/03. Budget Documentation/2015-16/index.html
+++ b/Documents/03. Budget Documentation/2015-16/index.html
@@ -7,11 +7,9 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/03. Budget Documentation/2015-16
 table_items:
-- {_type: TableFormItem, label: 01. Draft Budget, location: /Documents/03. Budget
-    Documentation/2015-16, modified_date: '4/28/2015 1:43 PM', path: /Documents/03.%20Budget%20Documentation/2015-16/01.%20Draft%20Budget,
+- {label: 01. Draft Budget, modified_date: '4/28/2015 1:43 PM', path: /Documents/03.%20Budget%20Documentation/2015-16/01.%20Draft%20Budget,
   type: table_form_item, user: Sephiri Tlhomeli}
-- {_type: TableFormItem, label: 02. Adopted Budgets, location: /Documents/03. Budget
-    Documentation/2015-16, modified_date: '6/1/2015 11:51 AM', path: /Documents/03.%20Budget%20Documentation/2015-16/02.%20Adopted%20Budgets,
+- {label: 02. Adopted Budgets, modified_date: '6/1/2015 11:51 AM', path: /Documents/03.%20Budget%20Documentation/2015-16/02.%20Adopted%20Budgets,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
