--- a/Documents/03. Budget Documentation/2016-17/index.html
+++ b/Documents/03. Budget Documentation/2016-17/index.html
@@ -7,9 +7,10 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/03. Budget Documentation/2016-17
 table_items:
-- {_type: TableFormItem, label: 01. Draft, location: /Documents/03. Budget Documentation/2016-17,
-  modified_date: '5/12/2016 4:06 PM', path: /Documents/03.%20Budget%20Documentation/2016-17/01.%20Draft,
+- {label: 01. Draft, modified_date: '5/12/2016 4:06 PM', path: /Documents/03.%20Budget%20Documentation/2016-17/01.%20Draft,
   type: table_form_item, user: Sephiri Tlhomeli}
+- {label: 02. Adopted, modified_date: '8/22/2016 1:09 PM', path: /Documents/03.%20Budget%20Documentation/2016-17/02.%20Adopted,
+  type: table_form_item, user: Elsabe Rossouw}
 title: null
 
 ---
