--- a/Documents/04. Service Delivery and Budget Implementation Plans/2012-13/index.html
+++ b/Documents/04. Service Delivery and Budget Implementation Plans/2012-13/index.html
@@ -9,17 +9,11 @@ layout: default
 original_url: http://mfma.treasury.gov.za/Documents/04. Service Delivery and Budget
   Implementation Plans/2012-13
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/04. Service Delivery
-    and Budget Implementation Plans/2012-13, modified_date: '6/26/2012 10:10 AM',
-  path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2012-13/01.%20Metros,
+- {label: 01. Metros, modified_date: '6/26/2012 10:10 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2012-13/01.%20Metros,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 02. Local Municipalities, location: /Documents/04.
-    Service Delivery and Budget Implementation Plans/2012-13, modified_date: '2/18/2013
-    2:37 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2012-13/02.%20Local%20Municipalities,
+- {label: 02. Local Municipalities, modified_date: '2/18/2013 2:37 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2012-13/02.%20Local%20Municipalities,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: 03. District Municipalities, location: /Documents/04.
-    Service Delivery and Budget Implementation Plans/2012-13, modified_date: '8/13/2012
-    9:19 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2012-13/03.%20District%20Municipalities,
+- {label: 03. District Municipalities, modified_date: '8/13/2012 9:19 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2012-13/03.%20District%20Municipalities,
   type: table_form_item, user: Lawrence Gqesha}
 title: null
 
