--- a/Documents/05. Annual Financial Statements/2005-06/index.html
+++ b/Documents/05. Annual Financial Statements/2005-06/index.html
@@ -8,14 +8,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/05. Annual Financial Statements/2005-06
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/05. Annual Financial
-    Statements/2005-06, modified_date: '10/19/2010 10:36 AM', path: /Documents/05.%20Annual%20Financial%20Statements/2005-06/01.%20Metros,
+- {label: 01. Metros, modified_date: '10/19/2010 10:36 AM', path: /Documents/05.%20Annual%20Financial%20Statements/2005-06/01.%20Metros,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 02. Local Municipalities, location: /Documents/05.
-    Annual Financial Statements/2005-06, modified_date: '10/19/2010 10:30 AM', path: /Documents/05.%20Annual%20Financial%20Statements/2005-06/02.%20Local%20Municipalities,
+- {label: 02. Local Municipalities, modified_date: '10/19/2010 10:30 AM', path: /Documents/05.%20Annual%20Financial%20Statements/2005-06/02.%20Local%20Municipalities,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 03. District Municipalities, location: /Documents/05.
-    Annual Financial Statements/2005-06, modified_date: '10/19/2010 10:29 AM', path: /Documents/05.%20Annual%20Financial%20Statements/2005-06/03.%20District%20Municipalities,
+- {label: 03. District Municipalities, modified_date: '10/19/2010 10:29 AM', path: /Documents/05.%20Annual%20Financial%20Statements/2005-06/03.%20District%20Municipalities,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
