--- a/Documents/05. Annual Financial Statements/2006-07/index.html
+++ b/Documents/05. Annual Financial Statements/2006-07/index.html
@@ -8,14 +8,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/05. Annual Financial Statements/2006-07
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/05. Annual Financial
-    Statements/2006-07, modified_date: '10/7/2010 2:06 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2006-07/01.%20Metros,
+- {label: 01. Metros, modified_date: '10/7/2010 2:06 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2006-07/01.%20Metros,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 02. Local municipalities, location: /Documents/05.
-    Annual Financial Statements/2006-07, modified_date: '10/7/2010 2:02 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2006-07/02.%20Local%20municipalities,
+- {label: 02. Local municipalities, modified_date: '10/7/2010 2:02 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2006-07/02.%20Local%20municipalities,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 03. District municipalities, location: /Documents/05.
-    Annual Financial Statements/2006-07, modified_date: '10/7/2010 2:01 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2006-07/03.%20District%20municipalities,
+- {label: 03. District municipalities, modified_date: '10/7/2010 2:01 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2006-07/03.%20District%20municipalities,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
