--- a/Documents/05. Annual Financial Statements/2014-15/index.html
+++ b/Documents/05. Annual Financial Statements/2014-15/index.html
@@ -8,11 +8,9 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/05. Annual Financial Statements/2014-15
 table_items:
-- {_type: TableFormItem, label: Audited, location: /Documents/05. Annual Financial
-    Statements/2014-15, modified_date: '12/15/2015 10:44 AM', path: /Documents/05.%20Annual%20Financial%20Statements/2014-15/Audited,
+- {label: Audited, modified_date: '12/15/2015 10:44 AM', path: /Documents/05.%20Annual%20Financial%20Statements/2014-15/Audited,
   type: table_form_item, user: Lawrence Gqesha}
-- {_type: TableFormItem, label: Pre-audited, location: /Documents/05. Annual Financial
-    Statements/2014-15, modified_date: '9/15/2015 8:50 AM', path: /Documents/05.%20Annual%20Financial%20Statements/2014-15/Pre-audited,
+- {label: Pre-audited, modified_date: '9/15/2015 8:50 AM', path: /Documents/05.%20Annual%20Financial%20Statements/2014-15/Pre-audited,
   type: table_form_item, user: Lawrence Gqesha}
 title: null
 
