--- a/Documents/06. Annual Reports/2011-12/index.html
+++ b/Documents/06. Annual Reports/2011-12/index.html
@@ -7,14 +7,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/06. Annual Reports/2011-12
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/06. Annual Reports/2011-12,
-  modified_date: '2/1/2013 12:06 PM', path: /Documents/06.%20Annual%20Reports/2011-12/01.%20Metros,
+- {label: 01. Metros, modified_date: '2/1/2013 12:06 PM', path: /Documents/06.%20Annual%20Reports/2011-12/01.%20Metros,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 02. Local municipalities, location: /Documents/06.
-    Annual Reports/2011-12, modified_date: '2/1/2013 12:10 PM', path: /Documents/06.%20Annual%20Reports/2011-12/02.%20Local%20municipalities,
+- {label: 02. Local municipalities, modified_date: '2/1/2013 12:10 PM', path: /Documents/06.%20Annual%20Reports/2011-12/02.%20Local%20municipalities,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 03. District municipalities, location: /Documents/06.
-    Annual Reports/2011-12, modified_date: '2/1/2013 12:13 PM', path: /Documents/06.%20Annual%20Reports/2011-12/03.%20District%20municipalities,
+- {label: 03. District municipalities, modified_date: '2/1/2013 12:13 PM', path: /Documents/06.%20Annual%20Reports/2011-12/03.%20District%20municipalities,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
