--- a/Documents/06. Annual Reports/2013-14/index.html
+++ b/Documents/06. Annual Reports/2013-14/index.html
@@ -7,14 +7,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/06. Annual Reports/2013-14
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/06. Annual Reports/2013-14,
-  modified_date: '2/16/2015 3:45 PM', path: /Documents/06.%20Annual%20Reports/2013-14/01.%20Metros,
+- {label: 01. Metros, modified_date: '2/16/2015 3:45 PM', path: /Documents/06.%20Annual%20Reports/2013-14/01.%20Metros,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 02. Local municipalities, location: /Documents/06.
-    Annual Reports/2013-14, modified_date: '2/16/2015 3:47 PM', path: /Documents/06.%20Annual%20Reports/2013-14/02.%20Local%20municipalities,
+- {label: 02. Local municipalities, modified_date: '2/16/2015 3:47 PM', path: /Documents/06.%20Annual%20Reports/2013-14/02.%20Local%20municipalities,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 03. District municipalities, location: /Documents/06.
-    Annual Reports/2013-14, modified_date: '2/16/2015 4:25 PM', path: /Documents/06.%20Annual%20Reports/2013-14/03.%20District%20municipalities,
+- {label: 03. District municipalities, modified_date: '2/16/2015 4:25 PM', path: /Documents/06.%20Annual%20Reports/2013-14/03.%20District%20municipalities,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
