--- a/Documents/07. Audit Reports/2003-04/index.html
+++ b/Documents/07. Audit Reports/2003-04/index.html
@@ -7,14 +7,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/07. Audit Reports/2003-04
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/07. Audit Reports/2003-04,
-  modified_date: '4/8/2011 9:00 AM', path: /Documents/07.%20Audit%20Reports/2003-04/01.%20Metros,
+- {label: 01. Metros, modified_date: '4/8/2011 9:00 AM', path: /Documents/07.%20Audit%20Reports/2003-04/01.%20Metros,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 02. Local municipalities, location: /Documents/07.
-    Audit Reports/2003-04, modified_date: '4/8/2011 9:00 AM', path: /Documents/07.%20Audit%20Reports/2003-04/02.%20Local%20municipalities,
+- {label: 02. Local municipalities, modified_date: '4/8/2011 9:00 AM', path: /Documents/07.%20Audit%20Reports/2003-04/02.%20Local%20municipalities,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 03. District municipalities, location: /Documents/07.
-    Audit Reports/2003-04, modified_date: '4/8/2011 9:00 AM', path: /Documents/07.%20Audit%20Reports/2003-04/03.%20District%20municipalities,
+- {label: 03. District municipalities, modified_date: '4/8/2011 9:00 AM', path: /Documents/07.%20Audit%20Reports/2003-04/03.%20District%20municipalities,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
