--- a/Documents/07. Audit Reports/2006-07/index.html
+++ b/Documents/07. Audit Reports/2006-07/index.html
@@ -7,14 +7,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/07. Audit Reports/2006-07
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/07. Audit Reports/2006-07,
-  modified_date: '3/14/2011 2:30 PM', path: /Documents/07.%20Audit%20Reports/2006-07/01.%20Metros,
+- {label: 01. Metros, modified_date: '3/14/2011 2:30 PM', path: /Documents/07.%20Audit%20Reports/2006-07/01.%20Metros,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 02. Local Municipalities, location: /Documents/07.
-    Audit Reports/2006-07, modified_date: '3/14/2011 2:30 PM', path: /Documents/07.%20Audit%20Reports/2006-07/02.%20Local%20Municipalities,
+- {label: 02. Local Municipalities, modified_date: '3/14/2011 2:30 PM', path: /Documents/07.%20Audit%20Reports/2006-07/02.%20Local%20Municipalities,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 03. District Municipalities, location: /Documents/07.
-    Audit Reports/2006-07, modified_date: '3/14/2011 2:34 PM', path: /Documents/07.%20Audit%20Reports/2006-07/03.%20District%20Municipalities,
+- {label: 03. District Municipalities, modified_date: '3/14/2011 2:34 PM', path: /Documents/07.%20Audit%20Reports/2006-07/03.%20District%20Municipalities,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
