--- a/Documents/07. Audit Reports/2008-09/index.html
+++ b/Documents/07. Audit Reports/2008-09/index.html
@@ -7,14 +7,11 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/07. Audit Reports/2008-09
 table_items:
-- {_type: TableFormItem, label: 01. Metros, location: /Documents/07. Audit Reports/2008-09,
-  modified_date: '3/4/2011 3:12 PM', path: /Documents/07.%20Audit%20Reports/2008-09/01.%20Metros,
+- {label: 01. Metros, modified_date: '3/4/2011 3:12 PM', path: /Documents/07.%20Audit%20Reports/2008-09/01.%20Metros,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 02. Local municipalities, location: /Documents/07.
-    Audit Reports/2008-09, modified_date: '3/4/2011 3:15 PM', path: /Documents/07.%20Audit%20Reports/2008-09/02.%20Local%20municipalities,
+- {label: 02. Local municipalities, modified_date: '3/4/2011 3:15 PM', path: /Documents/07.%20Audit%20Reports/2008-09/02.%20Local%20municipalities,
   type: table_form_item, user: Elsabe Rossouw}
-- {_type: TableFormItem, label: 03. District municipalities, location: /Documents/07.
-    Audit Reports/2008-09, modified_date: '3/4/2011 3:12 PM', path: /Documents/07.%20Audit%20Reports/2008-09/03.%20District%20municipalities,
+- {label: 03. District municipalities, modified_date: '3/4/2011 3:12 PM', path: /Documents/07.%20Audit%20Reports/2008-09/03.%20District%20municipalities,
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
